이미지 추가 연습
이렇게 하면 간편하게 이미지 추가가 가능합니다.

--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -5,4 +5,6 @@ title:  "첫 포스트입니다."
 
 # 처음 블로그 글
 
-이렇게 하면 되나? 
+이렇게 하면 이미지 업로드가 되나요? 
+
+![BG](C:\study\whoami121212.github.io\images\2024-04-01-first\BG.png)나? 
