--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -7,4 +7,6 @@ title:  "첫 포스트입니다."
 
 이렇게 하면 이미지 업로드가 되나요? 
 
-![BG](C:\study\whoami121212.github.io\images\2024-04-01-first\BG.png)나? 
+
+
+<img src="C:\study\whoami121212.github.io\images\2024-04-01-first\thumb - 로직프로 강의.png" alt="thumb - 로직프로 강의" style="zoom:50%;" />
