이미지 업로드 테스트3

--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -8,3 +8,7 @@ title:  "첫 포스트입니다."
 이렇게 하면 이미지 업로드가 되나요? 
 
 <img src="C:\study\whoami121212.github.io\images\2024-04-01-first\imageTEST.png" alt="imageTEST" style="zoom:75%;" />
+
+
+
+![image-20240401232741441](C:\study\whoami121212.github.io\images\2024-04-01-first\image-20240401232741441.png)
