--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -12,3 +12,5 @@ title:  "첫 포스트입니다."
 
 
 ![image-20240401232741441](C:\study\whoami121212.github.io\images\2024-04-01-first\image-20240401232741441.png)
+
+![image-20240401233001298](../images/2024-04-01-first/image-20240401233001298.png)
