이미지 업로드 테스트

--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "첫 포스트입니다."
 categories: GameDev
-
+typora-root-url: ../
 ---
 
 # 처음 블로그 글
@@ -16,3 +16,5 @@ categories: GameDev
 ![image-20240401232741441](C:\study\whoami121212.github.io\images\2024-04-01-first\image-20240401232741441.png)
 
 ![image-20240401233001298](../images/2024-04-01-first/image-20240401233001298.png)
+
+![image-20240401234046480](/images/2024-04-01-first/image-20240401234046480.png)
