--- a/_posts/2024-04-01-first.md
+++ b/_posts/2024-04-01-first.md
@@ -1,20 +1,25 @@
 ---
 layout: single
-title:  "첫 포스트입니다."
+title:  "Typora 이미지 업로드 방법"
 categories: GameDev
 typora-root-url: ../
 ---
 
-# 처음 블로그 글
+# 결론적으로 가장 쉽게 업로드 하는 방법
 
-이렇게 하면 이미지 업로드가 되나요? 
+1. 먼저 환경설정에서 이미지 경로 설정을 해준다. 
+   ![image-20240401234435458](/images/2024-04-01-first/image-20240401234435458.png)
+2. MD파일 헤더에 아래 문구를 추가해준다. 
+   typora-root-url: ../
+3. 이후 이미지를 붙여넣기 하면 아래와 같이 경로가 표시된다. 
+   ![image-20240401234553960](/images/2024-04-01-first/image-20240401234553960.png)
 
-<img src="C:\study\whoami121212.github.io\images\2024-04-01-first\imageTEST.png" alt="imageTEST" style="zoom:75%;" />
+
+
+짜잔. DONE!
 
 
 
-![image-20240401232741441](C:\study\whoami121212.github.io\images\2024-04-01-first\image-20240401232741441.png)
 
-![image-20240401233001298](../images/2024-04-01-first/image-20240401233001298.png)
 
 ![image-20240401234046480](/images/2024-04-01-first/image-20240401234046480.png)
