--- a/_posts/2024-04-01-work.md
+++ b/_posts/2024-04-01-work.md
@@ -3,6 +3,7 @@ layout: single
 title:  "업무 메모"
 categories: Work
 typora-root-url: ../
+published: false
 ---
 
 # 업무 기록 
@@ -133,7 +134,7 @@ typora-root-url: ../
 멋있는데? 
 대충 스마일게이트에서 인디게임 개발자를 지칭하는 대명사입니다. 
 
-참고) 고트가 아는 잡다한 것들
+참고>> 고트가 아는 잡다한 것들
 
 스마일게이트는 크로스파이어, 로스트아크 등 대중적으로 성공한 IP를 보유한 [비상장 대기업]이다. 
 비상장사답게 대세에 따르지 않거나, 콘텐츠를 뚝심있게 운영하는 등 '부자니까' 가능한 운영을 하는 경향을 보인다. 
