--- a/_posts/2024-04-04-Macro.md
+++ b/_posts/2024-04-04-Macro.md
@@ -26,6 +26,7 @@ sidebar:
 ## 그럼 매크로는 무엇인가? 
 매크로 메뉴에서 + 버튼으로 추가 가능. 
 input과 output 로직을 만드는 부분은 함수와 비슷하지만 **exec, 즉 실행핀을 만들어줄 수 있다.**
+
 ### 함수와 결정적으로 다른 부분 
 - 함수는 실행될 때 함수가 저장된 부분으로 이동해서 실행 후 다시 원래 코드로 돌아오는 개념 
-- 매크로는 설정된 코드들이 **복붙되어** 실행된다. 
+- 매크로는 설정된 코드들이 **복붙되어** 실행된다
