이미지 경로 수정
MD문서를 posts/[폴더이름] 으로 포함시킬 수 있도록 전체 이미지 경로를 수정함.

--- a/_posts/UE5_part1/2024-04-04-Macro.md
+++ b/_posts/UE5_part1/2024-04-04-Macro.md
@@ -17,11 +17,11 @@ sidebar:
 
 - InputAxis Value가 0이 아닐 때, 양수면 true/음수면 false로 분기를 나누어서 sprite를 변경해주었다. 
 
-![image-20240404001940490](/images/2024-04-04-Macro/image-20240404001940490.png)
+![image-20240404001940490](/../images/2024-04-04-Macro/image-20240404001940490.png)
 
 - **Compare Float**을 이용하면 4개의 노드를 하나로 합칠 수 있음 
 
-![image-20240404002121296](/images/2024-04-04-Macro/image-20240404002121296.png)
+![image-20240404002121296](/../images/2024-04-04-Macro/image-20240404002121296.png)
 
 ## 그럼 매크로는 무엇인가? 
 매크로 메뉴에서 + 버튼으로 추가 가능. 
