--- a/_posts/UE5BP_part2/2024-04-05-State.md
+++ b/_posts/UE5BP_part2/2024-04-05-State.md
@@ -31,3 +31,13 @@ sidebar:
 
 - Update 애니메이션 함수의 경우, sprite가 side_** 버전으로 좌/우가 동일한 상태이므로, 
 - Direction이 Left일 때에 먼저 rotation 처리를 해주고, Switch문을 통해서 Idle/Move/Skill을 제어한다. 
+
+## 추가 : 공격을 하다가 방향을 바꾸는 경우 
+- 현재 공격 애니메이션이 재생이 되면, 애니메이션의 시간만큼 재생되도록 Delay를 걸어두었다. 
+- 그래서 공격 도중 방향을 바꾸면 여전히 공격을 하는 상태에서 방향이 바뀌고 애니메이션이 잠시 후 중단되는 문제가 있음. 
+
+### **스킬을 사용하는 중에는 방향 전환을 무시하면 됨**
+
+<img src="/../images/2024-04-05-State/image-20240405201258474.png" alt="image-20240405201258474" style="zoom:50%;" />
+
+요거를 보면 SEQ상 일단 스킬 사용 중인지 아닌지를 판별한 후 State를 지정하고, 그 다음 순서로 방향전환을 실시하는 것을 알 수 있다. "공격 중에 방향전환이 실행되지 않도록"하기 위해서는 Skill State에 대한 체크를 나중에 하는 방향으로 변경할 수 있음. 
