04월 학습내용

--- a/_posts/UE5BP_part2/2024-04-05-Movement.md
+++ b/_posts/UE5BP_part2/2024-04-05-Movement.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  ""
+title:  "이동 구현"
 categories: UE5BP-2D
 typora-root-url: ../
 toc: true
@@ -20,9 +20,27 @@ Set Actor Location : 새로운 위치를 지정해서 Location을 변경한다.
 
 Add Actor World Offset : 새로운 위치를 구하지 않고, 상대적인 위치를 꽂아준다? 
 
+- Character Movement 관련 함수 
+
+  - Add Input Vector 
+
+  - Add Movement Input : 기본적으로 위와 동일하나, Scale Value (0~1)가 있어서 Axis value를 넣어줄 수 있다.
+
 # Editor
 ## Elements
 - Volumes 
   - Blocking Volume : 보이지는 않지만 Actor의 이동을 막는 Actor
 ## BP Component
 - Character Movement : Character를 상속받으면 붙어있는 component. 이동에 대한 많은 기능들이 포함되어 있다. 
+
+# 상하좌우 이동 
+
+아래와 같이 작성 시 좌우는 괜찮은데 상하는 작동하지 않는 것을 볼 수 있다. 왜일까? 
+
+<img src="/../images/2024-04-05-Movement/image-20240406135205326.png" alt="image-20240406135205326" style="zoom:50%;" />
+
+- Character Movement에 "Default Land Movement Mode"가 Walking으로 설정되어 있다. 
+- walking은 기본적으로 땅에만 붙어서 움직이는 개념이기 때문에 z축 이동이 실행되지 않는다. 
+- 따라서 이것을 flying으로 바꾸면 Z축 이동도 가능하다. 
+- **하지만**, 날아다니는 것으로 바꾸었기 때문에 이동이 어색해지는 문제가 발생. 이는 character movement에 온갖 설정들이 다 붙어있기 때문에 발생하는 문제로, 설정을 의도에 맞게 변경해주어야 한다. 
+- Breaking Deceleration을 walking과 동일한 수준으로 변경해주면 해결된다. 
