--- a/_posts/UE5BP_part2/2024-04-13-1-Review.md
+++ b/_posts/UE5BP_part2/2024-04-13-1-Review.md
@@ -41,3 +41,37 @@ Object -> Actor -> Pawn -> Character -> PaperCharacter 를 상속받음. 즉 레
     <img src="/../images/2024-04-13-1-Review/image-20240413073919059.png" alt="image-20240413073919059" style="zoom:67%;" />
 
   
+
+- BeginAttack 
+
+  - Creature가 공격에 들어가게 되는 경우 실행되는 Custom Event 
+
+  - 상태가 ( Idle, Move )인 경우 Skill 상태로 변경하고, Update Animation실행해서 Attack Flipbook을 재생한다. 
+    이후 **Process Attack**(밑에 설명)을 실행한다. 
+
+  - 마지막에는 **Get Flipbook Length**를 통해서 현재 재생되는 Flipbook의 전체 재생시간을 받아오고, 그 시간만큼 **Delay**해서 충분히 재생될 수 있도록 한다. 공격이 종료되면 State를 Move로 변경한다. 
+
+  - **ProcessAttack** 
+
+    - BP_Creature는 Viewport에서 sprite 산하에 3개의 공격범위 충돌체를 가지고 있다. 
+
+    - 각 Direction에 따라서 충돌체를 select 한 다음, **Get Overlapping Actors** 를 통해서 현 시점에 겹치는 BP_Creature들을 Array로 가져온다. 
+      <img src="/../images/2024-04-13-1-Review/image-20240413074943330.png" alt="image-20240413074943330" style="zoom:67%;" />
+
+    - 가져온 배열을 for each로 하나하나 처리하는데, 현재 Array의 Element는 Actor Class이므로 BP_Creature로 캐스팅 해준 다음 **OnDamaged** 함수를 실행한다. 이때, OnDamaged는 Damage와 Attacker를 매개변수로 받는데, Damage는 Data에서 가져오고 Attacker는 self(자신)로 설정한다. 
+
+      - **OnDamaged**
+
+        - Damage를 입는 주체가 Attacker가 아닐 때만 실행한다. 
+
+        - (Hp - Damage)를 구해서 Hp를 Set 하는데, 그 수치는 0부터 MaxHp 사이에 있어야 한다(**Clamp**).
+          <img src="/../images/2024-04-13-1-Review/image-20240413075703329.png" alt="image-20240413075703329" style="zoom:67%;" />
+
+        - 이후 HpBar 수정을 위해서 현재 Hp와 MaxHp의 비율을 Hp Ratio에 저장한다. UI로 만들어둔 WBP_HpBar는 바로 밑에 설명. 
+
+        - 이 또한 Creature의 component로 붙어있는 HpBarWidget을 가져와서 Widget Object로 불러오고, WBP_HpBar로 캐스팅 해주는 작업이 필요하다. (WBP_HpBar 안에 있는 HpRatio를 가져와서 Set 하기 위해서)
+
+          ![image-20240413080213386](/../images/2024-04-13-1-Review/image-20240413080213386.png)
+          
+#### WBP_HpBar
+
