--- a/_posts/UE5BP_part2/2024-04-13-1-Review.md
+++ b/_posts/UE5BP_part2/2024-04-13-1-Review.md
@@ -99,4 +99,24 @@ Object -> Actor -> Pawn -> Character -> PaperCharacter 를 상속받음. 즉 레
 ### AI와 Controller
 #### BP_PlayerController
 - 캐릭터의 움직임과 관련된 로직이 실행된다. 
-- 
+- 현재 게임이 실행되면 Knight 하나가 바로 플레이어로 지정되는 상태이다. 따라서, 플레이어의 상태를 제어하기 위해서 "현재 컨트롤하고 있는 Pawn"을 BP_Knight MyPlayer 변수에 저장한다. 
+  <img src="/../images/2024-04-13-1-Review/image-20240415223207171.png" alt="image-20240415223207171" style="zoom:67%;" />
+- **Update Input**
+  - MyPlayer 의 State에 따라서 실행된다. 공격 중일 때에는 움직일 수 없으므로 Idle과 Move 상태일 때에만 실행. 
+  - 순서대로 시퀀스 0, 1, 2가 실행된다. 
+    - seq 0 : MoveUp과 MoveRight의 value가 0이 아닐 때에만 state를 move로 변경한다. 
+      ![image-20240415223452246](/../images/2024-04-13-1-Review/image-20240415223452246.png)
+    - seq 1, 2 : 각각 MoveUp, MoveRight이 양수냐 음수냐에 따라서 Direction을 지정한다. 
+      ![image-20240415223715113](/../images/2024-04-13-1-Review/image-20240415223715113.png)
+    - 이때 지정된 방향에 따라서 Creature에서 Update Logic이 실행되면서 이동이 실행된다. 
+
+#### BP_AIController
+- Skeleton에 Detail > Pawn > AIController 에 BP_AIController를 설정해두면 해당 pawn의 움직임이 이 컨트롤러를 따르게 된다. 
+- 따라서 BP 내부에서 Get Controlled Pawn을 찾으면 이녀석이 BP_Monster이므로 casting해서 My Monster 변수에 저장해준다. 
+  <img src="/../images/2024-04-13-1-Review/image-20240415225324700.png" alt="image-20240415225324700" style="zoom:67%;" />
+- **UpdateAI**
+  - PlayerController의 UpdateInput과 마찬가지로, 상태와 방향을 지정해주어야 한다. 
+  - 마찬가지로 이동은 Creature에서 공통으로 제어하고 있음. 
+  - 먼저 MyMonster는 Idle 상태에서 BP_Knight를 찾고, BP_Monster.Target Enemy 변수에 저장한 다음 상태를 Move로 변경한다. 
+  - Move 상태에서는 Target과 나와의 거리를 빼서 Chase Direction을 구하고, 이 거리값의 X, Z 절대값에 따라서 이동할 방향을 지정해준다. 
+  - Chase Direction이 300 미만일 때에는 Creature.BeginAttack() 이벤트를 호출한다. 
