--- a/_posts/UE5BP_part2/2024-04-15-Tilemap.md
+++ b/_posts/UE5BP_part2/2024-04-15-Tilemap.md
@@ -27,4 +27,40 @@ sidebar:
    - (실제 코드 참고)
 3. 벽이라면 False, 땅이면 True 처리해서 List가 정확히 출력되는지 확인. 
 
+### Grid Pos to Index : 타일맵의 XY값이 있을 때 저장한 MapGrid의 Index로 변환하기
+1. xy값을 가지고 해당 타일이 갈 수 있는 곳인지 체크하기 위해서는 저장한 True/False를 검사할 수 있도록 Index로 변환이 가능해야 한다. 
+   <img src="/../images/2024-04-15-Tilemap/image-20240418215158108.png" alt="image-20240418215158108" style="zoom:67%;" />
+2. Input으로 들어온 X와 Y값이 맵의 범위 안에 있는지 체크한 뒤, X값 + (Y값 * width) = Index값이 되므로, return하는 함수를 구현한다. 
+
+### Get Tile Pos : 타일의 Position값을 가져오기 
+타일이 맵 상에 실제로 위치하는 Location 값을 가져오기 위함. 
+1. 맨처음 타일을 만들 때 사용했던 TileSet을 확인하면 타일의 Size가 32 * 32(pixel)인 것을 알 수 있다. 
+2. 우리는 사이즈를 5배씩 키워두었으므로, 이 사이즈에 5를 곱한다. Y축은 아래로 이동해야하니, -5를 곱함. 
+3. Actor(BP_TileMap)의 Location을 구한 뒤 각각 X, Z축에 더해준다. 
+   <img src="/../images/2024-04-15-Tilemap/image-20240418215802704.png" alt="image-20240418215802704" style="zoom:67%;" />
+
+### 제대로 배치되는지 TEST 
+1. BP_Knight로 이동 후 **Get Actor Of Class**로 Tilemap을 가져온다. 
+2. **Get Tile Pos**를 이용해서 플레이어를 배치할 공간의 좌표를 알아낸다. 
+3. 위치에 나이트를 배치시켜 본다. 
+   <img src="/../images/2024-04-15-Tilemap/image-20240418220058742.png" alt="image-20240418220058742" style="zoom:67%;" />
+
+
+
+
+
 ## 한칸씩 이동
+
+현재까지 타일의 X, Y 좌표를 이용해서 Location을 확인하는 법을 만들었고, 더불어 함수 내에서 이동이 가능한 영역인지(맵의 범위 안에 있는지 + 이동가능한 타일인지) 확인하는 것까지 구현되었다. 
+
+이제 어떻게 해야하겠는가? 
+
+- Move에 대한 처리는 BP_Creature.UpdateLogic()과 BP_PlayerController에서 하고있다. 
+- GridPos Structure를 선언한다. 
+- Creature 안에서 이동 로직을 개선한다. 
+	- 키보드 입력이 있으면 다음칸을 목적지로 지정하고 도착할 때까지 이동하는 함수를 구현 
+	- 목표지점에 도착하면 멈추도록 한다. 
+- PlayerController에서는 이를 위한 로직을 추가로 구현 
+
+### Creature.SetDestination() 
+- 
