--- a/_posts/UE5BP_part2/2024-04-15-Tilemap.md
+++ b/_posts/UE5BP_part2/2024-04-15-Tilemap.md
@@ -60,7 +60,13 @@ sidebar:
 - Creature 안에서 이동 로직을 개선한다. 
 	- 키보드 입력이 있으면 다음칸을 목적지로 지정하고 도착할 때까지 이동하는 함수를 구현 
 	- 목표지점에 도착하면 멈추도록 한다. 
+	- Update Logic
+	  - HasArrivedToDest() : DestLocation과 ActorLocation을 뺀 값이 10 이하이면 도착한 것으로 체크해서 bool 값 리턴
+	  - UpdateLogic에서는 State가 Move이고 HasArrivedDest가 false일 때에 UpdateDestination()과 AddMovementInput()을 실행한다. 
+	- Update Destination()
+	  - StopMove가 false일 때, Destination을 GridPos로 변환해서 얻은 TileMap의 좌표값이 CanGo()를 통해서 갈 수 있는 곳인지 체크하고, 맞으면 SetDestination 한다. 
 - PlayerController에서는 이를 위한 로직을 추가로 구현 
+  - Destination을 자꾸 체크하는 것을 막기 위해서 MoveUp과 MoveRight value 외에 추가로 Move상태로의 변환에 HasArrivedToDest 조건을 추가한다. 
 
-### Creature.SetDestination() 
-- 
+
+뭔가 굉장히 복잡해졌다... 시간날때 한 번 씩 보자 
