이동/회전과 관련된 학습

--- a/_posts/UE5BP_part3/2024-04-28-이동.md
+++ b/_posts/UE5BP_part3/2024-04-28-이동.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  ""
+title:  "SECTION2"
 categories: UE5BP-3D
 typora-root-url: ../
 toc: true
@@ -33,3 +33,25 @@ sidebar:
 <img src="/../images/2024-04-28-이동/image-20240428095014791.png" alt="image-20240428095014791" style="zoom:67%;" />
 
 해당 노드를 이용하면 모든 Input을 받아 이동할 방향벡터(normalized)가 구해지고, 해당 방향으로 Character Movement Component가 가진 최대속도 및 가속도에 영향을 받아 움직이게 된다. 
+
+## Input 받아서 캐릭터 회전 
+
+회전을 구현하라고 해서 아무 생각없이 Add Controller Yaw Input으로 해결했다. 
+(근데 이 함수는 Player controller Actor의 Yaw를 변경하는 함수였음.) 강의에서는 왜 다른 방법으로 했을 때 안되는지 설명함. 직접 계산하는 코드는 아래와 같다. 
+![image-20240428101145856](/../images/2024-04-28-이동/image-20240428101145856.png)
+
+1. Axis Value * Turn Rate(360.0f) * Delta Seconds = 틱당 회전해야 하는 각도 
+2. 이를 **Get Actor Rotation**으로 얻어온 Yaw값에 더해준다. 
+3. Set을 실행 
+
+이렇게 하면 작동하지 않는다. 애초에 내가 **Add Controller Yaw Input** 으로 했을 때 작동했던 이유가 있었는데, 아래와 같다. 
+
+- BP_Player -> Details -> Pawn -> Use Controller Rotation Yaw 가 True 상태. 
+- 즉, **콘트롤러를 통해서 Yaw를 조정하겠다고 이미 강제되어 있기 때문에 다른 방법으로는 Yaw를 조정할 수 없게 되어있음.** 
+  <img src="/../images/2024-04-28-이동/image-20240428101529897.png" alt="image-20240428101529897" style="zoom:67%;" />
+
+### 결론 
+- Add Controller Yaw Input은 runtime 시 레벨에 배치되는 Player Conroller라는 Actor의 Yaw(Y)값을 변경해주는 함수이다. 
+- Player BP의 옵션 중 Use Controller Rotation Yaw는 콘트롤러의 Yaw값을 플레이어의 Yaw값으로 하고, 다른 Yaw 값 변경사항은 무시한다. 
+- Value는 변경할 값을 바로 꽂아주는 것이기 때문에, 올바른 사용법은 Axis Value를 꽂아주는 것이 아니라, Turn Rate와 Delta Seconds를 곱한 값을 넣어주는 것이다. (arg가 "Val"인 것에 주목)
+  <img src="/../images/2024-04-28-이동/image-20240428104005693.png" alt="image-20240428104005693" style="zoom:67%;" />
