기존 학습한 내용 업데이트

--- a/_posts/UE5BP_part3/2024-06-18-UI.md
+++ b/_posts/UE5BP_part3/2024-06-18-UI.md
@@ -15,6 +15,13 @@ sidebar:
 {: .notice--primary} 
 
 # UI 요약
-1. UMG와 앵커 
-앵커는 알 것 같아. 
+## UMG와 앵커 
+1. Widget Blueprint 만들어서 WBP_UI 생성 
+2. 구성한 UI를 띄우기 위해서는 Create widget - Add to Viewport 기능을 이용해서 추가하면 된다. 
+   ![image-20240807223643529](/../images/2024-06-18-UI/image-20240807223643529.png)
 
+3. UI가 작동하게 하도록 만들어보자. 
+   - Input을 검색하면 3가지 모드가 나온다 : 
+     - Set Input Mode Game Only 
+     - Set Input Mode UI Only : UI만 입력을 받고 싶을 때 
+     - Set Input Mode Game And UI 
