학습과 기획내용 추가

--- a/_posts/design/2024-12-15-Day1.md
+++ b/_posts/design/2024-12-15-Day1.md
@@ -110,6 +110,68 @@ Order in Layer를 플레이어를 100정도로 두어서 무조건 앞으로 나
 
  	- 다음 업데이트 : 씨네머신으로 조금 더 멋지게 구현하기 
 4. NPC 배치 후 인게임에서 대화와 퀘스트 시스템 구현 
-5. 
 
-이제 대화시스템 만들어야되는데 템플릿이 마음에 드는 놈이 없네 일단 베이직으로 하고 비케이한테 만들자고 해야겠다. 
+
+
+# 2월 기획
+## 현재까지 작업 현황 
+- 캐릭터 모델링-리깅-애님 작업 후 유니티 임포트 
+- 임포트 후 애님 동작 정상화 및 머티리얼 구현 
+- 씬 전환과 로딩 화면 구현 
+- InGame Scene에서 타이틀 나오고 카메라 조작, Start 버튼 클릭하면 게임이 시작되도록 구현 
+- Dialogue System for Unity 구매 후 학습, 큐브를 향한 간단한 대화 구현 
+
+## 추가작업 목록 
+- (완료) 플레이어 이동을 Character Controller로 변경. rigidbody를 지우니까 Proximity Selector가 제대로 실행되지 않더라. 대상에게 trigger collider를 추가해서 해결함. 
+- (완료)follow cam이나 오프닝 처리 등을 lobby manager 클래스를 통해 제어할 것인지 결정. Lobby Manager에서 별도 스크립트 구성. followCam 폐기 
+- (완료) 타이틀/대화 시 플레이어 조작 비활성화 : 타이틀을 어떻게 할지 아직 안정했으니까 넘어갑시다... 대화에서는 못움직이게 처리 완료. 
+- 애니메이션 추가 제작 : Jump, Idle2, Attack 등 
+- 표정 바꾸기 및 추가애님 로직 작성 
+- 하늘 무료 에셋 받아서 바꾸기
+- (완료)마우스 휠로 카메라 위치 조작 : 기존 메인카메라 시네머신 이용하기로 결정. FreeLook 카메라로 딱 마음에 들게 구현함. 
+- 로우폴리 에셋 구매 및 레벨 구성
+- (진행 중) 씬전환 애니메이션 제작
+  - 씬 전환에 필요한 Canvas와 Mask, Image는 어디에서 관리될 것인가? >> 씬로더 안에 자식으로 관리하자. 그러면 매번 씬을 이동할때 씬로더에서 실행시키면 깔끔할 것 같다. 
+
+- Lobby 대화 기획 및 Bark를 이용한 튜토리얼 구현
+
+현재 시점에 가장 작업이 적절한 항목은
+대화 기획과 Bark를 이용한 튜토리얼 구현. 에셋구매와 레벨 구성 까지일 것 같다. 그래도 점프는 있으면 좋은데... 
+
+## Lobby 시작 직후 상황
+
+### 기본 조작방법 안내
+바닥에 새겨서 안내하자. 투명한 Sprite 이용해서 바닥에 배치하는 것으로 해결. 
+가까이 가면 Bark로 상세 조작법에 대한 소개. 
+소개할 내용 : [Interaction Key, Move Keys] 
+
+### 처음 시작하면 어떤? 
+어두운 숲길을 걸어가는 느낌. 나레이션이 나온다. (일반 대화창. 시작하자마자 나레이션만 나옴)
+"여러분은 학습을 위한 어둡고 무서운 첫 여정을 시작합니다. 하지만 무서워하지 마세요! 인프런이 여러분들을 위한 '밝은' 오솔길로 안내하겠습니다." 
+길 위에 wasd 이동 안내와 점프에 대한 안내가 나온다. 
+조금 더 앞으로 가면 마우스 휠을 통한 확대 / 축소와 귀여운 Idle Animation(인사 등)을 할 수 있는 키가 안내된다. 
+앞으로 조금 이동하면 초원이 펼쳐지고 시간대가 빠른 속도로 낮으로 변한다. 
+
+- 자동으로 낮으로 변할지, 아니면 빛나는 인프런 로고를 밟으면 변할지. 돌 위에 초록색으로 빛나는 인프런 로고가 있는데, 이걸 밟으면 낮으로 변하면서 빛이 사라지는건 어떤지? 
+
+길 바로 앞에는 Interaction Key 안내하는 NPC가 하나 서있다. NPC와는 Interaction Key로 대화가 가능하다. 
+
+- 대충 만나서 반갑다. 인프런 소개, 강의 추천, 그 외 궁금증 (이걸 어떻게 만들었는지, 지식공유, 멘토링, 문의)  세가지 중에 고르도록 한다. 
+
+- 무엇을 고르느냐에 따라서 포탈을 열 것인지, 맵에 깔아놓고 선택해서 들어갈 수 있도록 할 것인지 결정해야 한다. 
+- 메뉴에서 처음부터 시작하기를 할 수도 있고, 바로 강의 추천받으러 가기로 이동할 수도 있다. 
+
+### 인프런 소개, 지식공유, 멘토링
+간단한 소개메시지, 자세한 링크는 관련 페이지로 유도. 
+
+### 강의추천
+카테고리마다 배경이 달라진다. 기본적으로는 카테고리 소개, 지공자 소개, 강의 추천의 세 가지 콘텐츠로 구성되어 있다. 
+게임개발 : 판타지 배경. 검을 들고 휘두를 수 있다. 
+프로그래밍 : 연구소나 sci fi 배경. 
+디자인 : 자연. 정령 등
+생산성 : 현대 도시. 
+하드웨어 : 웨어하우스 
+
+
+이제 하나하나 만든 다음에 리소스 구매해서 꾸며보자. 
+
