--- a/_posts/design/2024-12-15-Day1.md
+++ b/_posts/design/2024-12-15-Day1.md
@@ -1,57 +1,3 @@
-수업을 들으면서 생각해야 할 점들 
-
-폴더의 구조
-
-Order in Layer를 플레이어를 100정도로 두어서 무조건 앞으로 나오게 할 수 있음. 
-
-메카닉을 아이들이 가지고 놀면서 전쟁게임을 하는 것. 
-나중에 후속작은 실제 역사를 가지고 만들어주면 좋을 것 같다. 
-
-
-
-미팅기록 정리 - 4 
-영어강의 검토 - 3 
-미팅준비 - 1
-주간프리뷰 지랄 염병 뭐있는지 구경 - 0 
-제니 동료피드백 -2 
-추천강의 세팅 -1 
-
-그렙 강의 세팅 
-렛유인은 내일 연락할 것 
-
-어떻게 이쪽으로 전향하셨는지? 
-지금은 출장을 많이 나와있다. 외국에 연구자들이랑 교류가 
-처음 접근은 금융권이랑 대기업 IT쪽은 계속 활용을 했었고 개발자랑 일도 많이 했었다. 
-
-외국유학생활이나 뭐 
-게임에 부가된 것 확장. 융합을 해서 실제 외국에서 활동하는 분야. 오히려 좋아하지만 아닌 분야에서
-업계에 있는 사람들은 재미가 문제가 아니다. 
-
-우리가 생각했던 것들 
-게이미피케이션에 대한 연구가 게임산업에 적용하는 것인지 
-아니면 게임을 연구해서 비게임분야에 적용하는 쪽으로 생각하시는건지 
-결국은 다양한 문제들을 게이미피케이션으로 해결하는 문제. 
-우리로 치면 온라인교육의 한계점 극복 같은 것들
-
-찍어놓은 영상이 있다. 개발 팀에서 영상 편집을 하고있다. 
-책을 4권정도. 전문가들 책을 편역한 것. 가르친 것들. 
-같이 협업을 하면서 알게된 내용들. 
-하다보니까 영어에 중요성이 생겨서 영어에대한 것. 
-스토리텔링의 중요성. 
-
-인프런은 개발팀에서 추천해줬다. 
-미국에서 컨퍼런스에 한국대표로 강연을 하는데, 생태계는 유럽쪽이 더 낫다. 
-배우면서 속한 분야들이 있는데, 전공을 어떻게 활용하면 좋을까 이런 부분들이 성공하면 되는데. 
-
-그래서 어떤 강의가 될 것인가? 
-기획 경영 마케팅 쪽으로 들어갈 것인지? 
-
-
-
-
-
-- 
-
 꿈을 크게 가져라. 깨져도 조각이 크다. 
 
 
@@ -114,6 +60,7 @@ Order in Layer를 플레이어를 100정도로 두어서 무조건 앞으로 나
 
 
 # 2월 기획
+
 ## 현재까지 작업 현황 
 - 캐릭터 모델링-리깅-애님 작업 후 유니티 임포트 
 - 임포트 후 애님 동작 정상화 및 머티리얼 구현 
@@ -121,22 +68,41 @@ Order in Layer를 플레이어를 100정도로 두어서 무조건 앞으로 나
 - InGame Scene에서 타이틀 나오고 카메라 조작, Start 버튼 클릭하면 게임이 시작되도록 구현 
 - Dialogue System for Unity 구매 후 학습, 큐브를 향한 간단한 대화 구현 
 
-## 추가작업 목록 
+## 추가작업 목록 1
 - (완료) 플레이어 이동을 Character Controller로 변경. rigidbody를 지우니까 Proximity Selector가 제대로 실행되지 않더라. 대상에게 trigger collider를 추가해서 해결함. 
 - (완료)follow cam이나 오프닝 처리 등을 lobby manager 클래스를 통해 제어할 것인지 결정. Lobby Manager에서 별도 스크립트 구성. followCam 폐기 
 - (완료) 타이틀/대화 시 플레이어 조작 비활성화 : 타이틀을 어떻게 할지 아직 안정했으니까 넘어갑시다... 대화에서는 못움직이게 처리 완료. 
+- (완료)마우스 휠로 카메라 위치 조작 : 기존 메인카메라 시네머신 이용하기로 결정. FreeLook 카메라로 딱 마음에 들게 구현함. 
+
+## 추가작업 목록 2 
+
+- (완료) 하늘 무료 에셋 받아서 바꾸기
+  - (완료) 하늘 적용 후 낮 / 밤 조절 테스트 : 하늘은 되는데 빛 표현을 따로 만져야되는게 아쉽네. 이거 한 통으로 되어있는 팩은 없나. 근데 어차피 하늘을 볼 일이 많이 없으므로 일단은 그냥 넘어가는 것으로 합시다. 
+  - (완료) 처음에 Lobby 시작에서는 밝았다가, 게임을 시작하면 어두워진다. 앞으로 가면 빛나는 로고가 있는데 이걸 밟으면 밝아진다. 
+- (완료) 뛸 때 먼지 날리는 이펙트 구현
+	- (완료) 이펙트를 오브젝트풀링으로 관리하기 
+	- (보류) 뛰었을 때 공중에서 생성되기는 하는데, 점프애니메이션 따로 만들면 해결됨. 
 - 애니메이션 추가 제작 : Jump, Idle2, Attack 등 
 - 표정 바꾸기 및 추가애님 로직 작성 
-- 하늘 무료 에셋 받아서 바꾸기
-- (완료)마우스 휠로 카메라 위치 조작 : 기존 메인카메라 시네머신 이용하기로 결정. FreeLook 카메라로 딱 마음에 들게 구현함. 
-- 로우폴리 에셋 구매 및 레벨 구성
-- (진행 중) 씬전환 애니메이션 제작
+- (진행 중) 로우폴리 에셋 구매 및 레벨 구성
+	- (완료) 에셋구매 완료. 새로운 씬에 이것저것 테스트 해볼 것. 뭐 하나 원활하게 처리가 되는게 하나도 없구만. 제기랄
+	- (완료) 높낮이는 특별히 필요할 것 같지 않지만 일단 지오메트리 도전해보고 살짝 적용해볼 것. 
+	- (완료)지오메트리 이용해서 외부에 산맥 배치
+	- (완료)자갈길 설치 
+	- (완료)언덕에 초원 배치 
+	- (완료)언덕 앞에 집 배치 
+- (완료)TMP 변경 : 미루어왔던 TMP 작업해야한다. 
+- (진행 중 - 보류) 씬전환 애니메이션 제작
   - 씬 전환에 필요한 Canvas와 Mask, Image는 어디에서 관리될 것인가? >> 씬로더 안에 자식으로 관리하자. 그러면 매번 씬을 이동할때 씬로더에서 실행시키면 깔끔할 것 같다. 
+  - 씬로더에서 실행시키려다가 포기. value가 높지 않으므로 작업 보류 
+- (진행 중) 대화 시 일시정지 기능 : 일단 무조건 멈추도록 이벤트를 추가해둠. 나중에 가상카메라 작동 방식으로 바꿔야 할 것 같은데 
+- (진행 중) Lobby 대화 기획 및 Bark를 이용한 튜토리얼 구현
+	- 무엇을 찾고있나요? 
+	- 나에게 맞는 강의를 찾고싶다, 좋은 지식공유자를 알고싶다, 이걸 어떻게 만들었는지 알고싶다, 모르겠다. 
+	- 앞에 보이는 인프런 로고에 발을 올리면 안내드리도록 하겠습니다. 
+- 코드 리팩토링 
 
-- Lobby 대화 기획 및 Bark를 이용한 튜토리얼 구현
 
-현재 시점에 가장 작업이 적절한 항목은
-대화 기획과 Bark를 이용한 튜토리얼 구현. 에셋구매와 레벨 구성 까지일 것 같다. 그래도 점프는 있으면 좋은데... 
 
 ## Lobby 시작 직후 상황
 
